Getting the test build started

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ repositories {
 dependencies {
     compile 'junit:junit:4.12'
     compile 'org.mockito:mockito-core:1.+'
-    testCompile 'junit:junit:4.12'
+
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 }
 
 android {
@@ -32,6 +35,12 @@ android {
         main {
             java {
                 srcDir 'src/main/java'
+            }
+        }
+
+        test {
+            java {
+                srcDir 'src/androidTest/java'
             }
         }
     }
