--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.facebook.testing.screenshot">
+   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
