Move py-tests from Makefile to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 }
 
+task pyTests(type: Exec) {
+     workingDir 'src/py'
+     commandLine 'python', '-m', 'unittest', 'discover'
+}
+
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
