--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,20 @@
 buildscript {
     repositories {
         jcenter()
+        maven() {
+           url "./repo"
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'com.facebook.testing.screenshot:plugin:0.1+'
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
+apply plugin: 'screenshot-tests-plugin'
 
 repositories {
     jcenter()
