--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -11,19 +11,6 @@ repositories {
 group='com.facebook.testing.screenshot'
 version='0.1-SNAPSHOT'
 
-def generatedOutputDir = file('build/generated-resources')
-def generatedZip = generatedOutputDir.toString() + '/android_screenshot_test.zip'
-
-task generatePyZip(type: Exec) {
-     outputs.dir generatedOutputDir
-     commandLine 'zip', '-r', generatedZip, 'src/py/android_screenshot_tests'
-
-     doFirst {
-        println "Creating directory for resources"
-        generatedOutputDir.mkdirs()
-     }
-}
-
 uploadArchives {
     repositories {
         mavenDeployer {
@@ -35,9 +22,7 @@ uploadArchives {
 compileJava {
     sourceSets {
       main {
-         // I have no idea what I'm doing
-         output.dir(generatedOutputDir, builtBy: 'generatePyZip')
-         resources.srcDirs generatedOutputDir
+         resources.srcDirs 'src/py'
       }
     }
 }
