Put only the files we care about

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -23,6 +23,11 @@ compileJava {
     sourceSets {
       main {
          resources.srcDirs 'src/py'
+         resources {
+             exclude '**/*.pyc'
+             exclude '**/test_*.py'
+             exclude '**/fixtures/**'
+         }
       }
     }
 }
