--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -12,8 +12,7 @@ group='com.facebook.testing.screenshot'
 
 uploadArchives {
     repositories {
-        mavenDeployer {
-            repository(url: uri('../repo'))
+        mavenInstaller {
         }
     }
 }
