Adding example file

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'groovy'
+jar {
+    manifest {
+        attributes "Implementation-Version": project.version.toString()
+    }
+}
+
 apply plugin: 'maven'
+
 
 dependencies {
     compile gradleApi()
