--- a/samples/one/src/main/AndroidManifest.xml
+++ b/samples/one/src/main/AndroidManifest.xml
@@ -2,6 +2,6 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package='com.facebook.testing.screenshot.samples'>
-   <uses-sdk android:minSdkVersion='9' />
+   <uses-sdk android:minSdkVersion='9' android:targetSdkVersion="22" />
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
