--- a/core/src/androidTest/AndroidManifest.xml
+++ b/core/src/androidTest/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-permission
       android:name="android.permission.DISABLE_KEYGUARD"/>
   <uses-permission android:name="android.permission.SET_ANIMATION_SCALE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
   <application
       android:debuggable="true">
