--- a/_config.yml
+++ b/_config.yml
@@ -26,22 +26,14 @@ sass:
 redcarpet:
   extensions: [with_toc_data, no_intra_emphasis, tables, autolink]
 
+gacode: "UA-44373548-12"
 color:
-  # Provides colour for background of top header of homepage
-  primary: "#6779ff"
-  # Provides colour for background of elsewhere on site
+  primary: "#9e2b07"
   secondary: "#e4e4e4"
-  # A color that will work for buttons laid on top of primary colour
-  light: "#4356e6"
-  # Color that will work for text on top of light color
+  light: "#de4d1f"
   lighttext: "#fff"
-  # Color of text in the top header of homepage, must be legible on top of primary color
   headertext: "#fff"
-  # Color of text on top of the secondary color background
   bodytext: "#151515"
-  # Background of fixed nav header - headertext color is used for mini logo text
-  nav: "#4356e6"
-  # Text of links in the nav
-  navtext: "#bfc6ff"
-  # Color of link underlines in the main body, and hover background color for links
-  link: "#4356e6"
+  nav: "#8a2100"
+  navtext: "#ed8564"
+  link: "#de4d1f"
