this version seems to work

--- a/examples/one/build.gradle
+++ b/examples/one/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        mavenLocal()
+        mavenCentral()
     }
 
     dependencies {
@@ -15,7 +15,7 @@ apply plugin: 'screenshot-tests-plugin'
 
 repositories {
     jcenter()
-    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
