--- a/release.gradle
+++ b/release.gradle
@@ -72,8 +72,8 @@ def getOptionalDeps() {
 
 if (property('POM_PACKAGING') == 'aar') {
   // We must be doing an android build I guess
-  afterEvaluate { project ->
 
+  afterEvaluate { project ->
     task androidSourcesJar(type: Jar) {
       classifier = 'sources'
       from android.sourceSets.main.java.srcDirs
@@ -86,7 +86,7 @@ if (property('POM_PACKAGING') == 'aar') {
       }
     }
     artifacts {
-      //archives androidSourcesJar
+      archives androidSourcesJar
       archives jarRelease
     }
 
@@ -99,6 +99,21 @@ if (property('POM_PACKAGING') == 'aar') {
         }
       }
     }
+  }
+} else {
+  task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+  }
+
+  task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+  }
+
+  artifacts {
+    archives sourcesJar
+    archives javadocJar
   }
 }
 
