add the proper class paths

--- a/release.gradle
+++ b/release.gradle
@@ -78,6 +78,13 @@ if (property('POM_PACKAGING') == 'aar') {
     task androidJavadoc(type: Javadoc) {
         source = android.sourceSets.main.java.srcDirs
         classpath += files(android.bootClasspath)
+
+        project.android.libraryVariants.all { variant ->
+          if (variant.name == "release") {
+            classpath += files(variant.javaCompile.classpath.files)
+          }
+        }
+
         if (JavaVersion.current().isJava8Compatible()) {
             println("this is java8")
             options.addStringOption('Xdoclint:none', '-quiet')
