--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,7 +22,7 @@ repositories {
 
 dependencies {
     compile 'junit:junit:4.12'
-    compile 'org.mockito:mockito-core:1.+'
+    compile 'org.mockito:mockito-core:1.10.19'
     compile 'com.google.dexmaker:dexmaker:1.0'
     compile 'com.google.dexmaker:dexmaker-mockito:1.0'
     compile 'com.android.support.test:runner:0.3'
