--- a/examples/one/build.gradle
+++ b/examples/one/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.3'
-        classpath 'com.facebook.testing.screenshot:plugin:0.2'
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.facebook.testing.screenshot:plugin:0.3'
     }
 }
 
@@ -27,4 +27,11 @@ android {
 }
 
 dependencies {
+  testCompile 'junit:junit:4.12'
+
+  androidTestCompile 'com.android.support:support-v4:21.0.0'
+  androidTestCompile 'com.android.support.test:rules:0.3'
+  androidTestCompile 'com.android.support.test:runner:0.3'
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+  testCompile "com.facebook.testing.screenshot:core:0.2"
 }
