--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'maven'
 
 dependencies {
     compile gradleApi()
+    testCompile 'com.android.tools.build:gradle:1.3.1'
 }
 repositories {
     mavenCentral()
