remove deps too

--- a/examples/one/build.gradle
+++ b/examples/one/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'com.facebook.testing.screenshot'
 
 repositories {
@@ -27,10 +27,4 @@ android {
 }
 
 dependencies {
-  testCompile 'junit:junit:4.12'
-
-  androidTestCompile 'com.android.support:support-v4:21.0.0'
-  androidTestCompile 'com.android.support.test:rules:0.3'
-  androidTestCompile 'com.android.support.test:runner:0.3'
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 }
