--- a/examples/one/src/main/AndroidManifest.xml
+++ b/examples/one/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 -->
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package='com.facebook.testing.screenshot.samples'>
+    package='com.facebook.testing.screenshot.examples'>
    <uses-sdk android:minSdkVersion='9' android:targetSdkVersion="22" />
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
