make the example test into an application

--- a/examples/one/build.gradle
+++ b/examples/one/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 apply plugin: 'com.facebook.testing.screenshot'
 
 repositories {
