--- a/examples/one/src/main/AndroidManifest.xml
+++ b/examples/one/src/main/AndroidManifest.xml
@@ -11,4 +11,8 @@
     package='com.facebook.testing.screenshot.examples'>
    <uses-sdk android:minSdkVersion='9' android:targetSdkVersion="22" />
    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+   <application>
+     <!-- not having an empty application block seems to cause the
+          instrumentation tests to fail with a ClassNotFoundException . -->
+   </application>
 </manifest>
