--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,7 +1,5 @@
 - title: Docs
-  href: docs/getting-started.html
-  category: docs
-
+  href: ./#getting-started
 - title: GitHub
   href: http://github.com/facebook/screenshot-tests-for-android
-  category: github
+
