--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,4 +1,4 @@
-- title: Docs
+- title: Getting Started
   href: ./#getting-started
 - title: GitHub
   href: http://github.com/facebook/screenshot-tests-for-android
