--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'maven'
 dependencies {
     compile gradleApi()
     testCompile 'com.android.tools.build:gradle:1.3.1'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
 
 repositories {
