--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,8 +23,9 @@ repositories {
 dependencies {
     compile 'junit:junit:4.12'
     compile 'org.mockito:mockito-core:1.10.19'
-    compile 'com.google.dexmaker:dexmaker:1.0'
-    compile 'com.google.dexmaker:dexmaker-mockito:1.0'
+    compile 'com.crittercism.dexmaker:dexmaker:1.4'
+    compile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
+    compile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
 
     androidTestCompile 'com.android.support:support-v4:21.0.0'
     androidTestCompile 'com.android.support.test:rules:0.3'
