--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,11 +22,11 @@ repositories {
 
 dependencies {
     compile 'junit:junit:4.12'
-    compile 'org.mockito:mockito-core:1.10.19'
     compile 'com.crittercism.dexmaker:dexmaker:1.4'
     compile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
-    compile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
 
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
     androidTestCompile 'com.android.support:support-v4:23.1.1'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
