Add Python 3 support
The tests pass, but there is still some ResourceWarnings because of
leaving file descriptors open (looks like internal to pillow, but not
sure yet)

Introduced a :plugin:py3Tests target to keep this tested.

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -45,4 +45,9 @@ task pyTests(type: Exec) {
      commandLine 'python', '-m', 'unittest', 'discover'
 }
 
+task py3Tests(type: Exec) {
+     workingDir file('./src/py')
+     commandLine 'python3', '-m', 'unittest', 'discover'
+}
+
 apply from: rootProject.file("release.gradle")
