--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -7,9 +7,14 @@ jar {
 
 apply plugin: 'maven'
 
+repositories {
+  mavenCentral()
+}
 
 dependencies {
     compile gradleApi()
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
+
     testCompile 'com.android.tools.build:gradle:1.3.1'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
