--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile gradleApi()
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
 
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile 'com.android.tools.build:gradle:1.3.1'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
