--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile gradleApi()
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
+    compile group: 'com.android.tools.ddms', name: 'ddmlib', version: '22.0'
 
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile 'com.android.tools.build:gradle:1.3.1'
