--- a/examples/app-example/build.gradle
+++ b/examples/app-example/build.gradle
@@ -2,10 +2,11 @@ buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.facebook.testing.screenshot:plugin:0.4.1'
     }
 }
