--- a/examples/app-example-androidjunitrunner/app/src/main/AndroidManifest.xml
+++ b/examples/app-example-androidjunitrunner/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nadera.myapplication">
+    package="com.example.screenshots">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
