--- a/examples/app-example-androidjunitrunner/app/build.gradle
+++ b/examples/app-example-androidjunitrunner/app/build.gradle
@@ -35,6 +35,13 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
+
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.0-SNAPSHOT@aar') {
+        transitive = true
+    }
+    compile('com.mapbox.mapboxsdk:mapbox-android-ui:2.0.0-beta.1') {
+        transitive = true
+    }
 }
 
 
