--- a/examples/app-example-androidjunitrunner/build.gradle
+++ b/examples/app-example-androidjunitrunner/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
