add texture view support

--- a/examples/app-example-androidjunitrunner/build.gradle
+++ b/examples/app-example-androidjunitrunner/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.facebook.testing.screenshot:plugin:0.4.2'
+        classpath 'com.facebook.testing.screenshot:plugin:0.4.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +17,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+        mavenLocal()
     }
 }
 
