--- a/examples/app-example-androidjunitrunner/build.gradle
+++ b/examples/app-example-androidjunitrunner/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
     repositories {
+        mavenLocal()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.facebook.testing.screenshot:plugin:0.4.3'
+        classpath 'com.facebook.testing.screenshot:plugin:0.4.4-beta'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,6 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
         jcenter()
     }
 }
