--- a/examples/app-example/build.gradle
+++ b/examples/app-example/build.gradle
@@ -20,8 +20,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 25
     buildToolsVersion "26.0.0"
+
+    defaultConfig {
+        minSdkVersion 9
+        targetSdkVersion 25
+    }
 
     sourceSets {
     }
