--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '26.0.0'
 
     packagingOptions {
@@ -43,6 +43,7 @@ android {
 
     defaultConfig {
         minSdkVersion 9
+        targetSdkVersion 25
         testInstrumentationRunner "com.facebook.testing.screenshot.CustomScreenshotTestRunner"
     }
 
