--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile gradleApi()
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
 
+    testCompile 'junit:junit:4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile 'com.android.tools.build:gradle:2.3.3'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
