--- a/examples/app-example-androidjunitrunner/app/src/main/AndroidManifest.xml
+++ b/examples/app-example-androidjunitrunner/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".DetailActivity"/>
     </application>
 
 </manifest>
