--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,66 +1,60 @@
 buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-    }
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-
-        // Can't use the default maven install for android libraries
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-    }
+  dependencies {
+    classpath plugs.agp
+    classpath plugs.mavenGradle
+  }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.facebook.testing.screenshot'
+group = 'com.facebook.testing.screenshot'
 
 repositories {
   mavenCentral()
 }
 
 dependencies {
-    compile 'junit:junit:4.12'
-    compile 'com.crittercism.dexmaker:dexmaker:1.4'
-    compile 'com.crittercism.dexmaker:dexmaker-dx:1.4'
+  compile deps.dexmaker
+  compile deps.dexmakerDx
+  compile deps.junit
 
-    androidTestCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
-    androidTestCompile 'com.android.support:support-v4:23.1.1'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+  androidTestCompile deps.espresso
+  androidTestCompile deps.mockito
+  androidTestCompile deps.dexmakerMockito
+  androidTestCompile deps.hamcrest
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.1'
+  compileSdkVersion versions.compileSdk
+  buildToolsVersion versions.buildTools
 
-    packagingOptions {
-        exclude 'LICENSE.txt'
-    }
+  packagingOptions {
+    exclude 'LICENSE.txt'
+  }
 
-    defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 25
-        testInstrumentationRunner "com.facebook.testing.screenshot.CustomScreenshotTestRunner"
-    }
+  defaultConfig {
+    minSdkVersion versions.minSdk
+    targetSdkVersion versions.targetSdk
+    testInstrumentationRunner "com.facebook.testing.screenshot.CustomScreenshotTestRunner"
+  }
 
-    lintOptions {
-        abortOnError false
-        disable 'InvalidPackage'
-    }
-
-    sourceSets {
-    }
+  lintOptions {
+    abortOnError false
+    disable 'InvalidPackage'
+  }
 }
 
 uploadArchives {
-    repositories {
-        mavenInstaller {
-        }
+  repositories {
+    mavenInstaller {
     }
+  }
 }
 
 apply from: rootProject.file("release.gradle")
