--- a/examples/app-example-androidjunitrunner/build.gradle
+++ b/examples/app-example-androidjunitrunner/build.gradle
@@ -1,25 +1,27 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    repositories {
-        mavenLocal()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.facebook.testing.screenshot:plugin:0.4.4'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  apply from: rootProject.file('../../versions.gradle')
+
+  repositories {
+    mavenLocal()
+    jcenter()
+  }
+
+  dependencies {
+    classpath plugs.agp
+    classpath plugs.screenshot
+  }
 }
 
 allprojects {
-    repositories {
-        mavenLocal()
-        jcenter()
+  repositories {
+    mavenLocal()
+    jcenter()
+    maven {
+      url "https://maven.google.com"
     }
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
