--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'groovy'
 jar {
-    manifest {
-        attributes "Implementation-Version": project.version.toString()
-    }
+  manifest {
+    attributes "Implementation-Version": project.version.toString()
+  }
 }
 
 apply plugin: 'maven'
@@ -13,51 +13,51 @@ repositories {
 }
 
 dependencies {
-    compile gradleApi()
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
+  compile gradleApi()
+  compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.10.v20160621'
 
-    testCompile 'junit:junit:4.12'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-    testCompile 'com.android.tools.build:gradle:2.3.3'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
+  testCompile deps.junit
+  testCompile plugs.agp
+  testCompile deps.mockito
+  testCompile deps.hamcrest
 }
 
-group='com.facebook.testing.screenshot'
+group = 'com.facebook.testing.screenshot'
 
 uploadArchives {
-    repositories {
-        mavenInstaller {
-        }
+  repositories {
+    mavenInstaller {
     }
+  }
 }
 
 compileJava {
-    sourceSets {
-      main {
-         resources.srcDirs 'src/py'
-         resources {
-             exclude '**/*.pyc'
-             exclude '**/test_*.py'
-             exclude '**/fixtures/**'
-         }
+  sourceSets {
+    main {
+      resources.srcDirs 'src/py'
+      resources {
+        exclude '**/*.pyc'
+        exclude '**/test_*.py'
+        exclude '**/fixtures/**'
       }
     }
+  }
 }
 
 task pyTests(type: Exec) {
-     workingDir file('./src/py')
-     commandLine 'python', '-m', 'unittest', 'discover'
+  workingDir file('./src/py')
+  commandLine 'python', '-m', 'unittest', 'discover'
 }
 
 task py3Tests(type: Exec) {
-     workingDir file('./src/py')
-     commandLine 'python3', '-m', 'unittest', 'discover'
+  workingDir file('./src/py')
+  commandLine 'python3', '-m', 'unittest', 'discover'
 }
 
 task sampleServer() {
-    doLast {
-        file = new File("plugin/src/py/android_screenshot_tests/fixtures/sdcard/screenshots/com.foo/screenshots-default/metadata.xml")
-    }
+  doLast {
+    file = new File("plugin/src/py/android_screenshot_tests/fixtures/sdcard/screenshots/com.foo/screenshots-default/metadata.xml")
+  }
 }
 
 apply from: rootProject.file("release.gradle")
