--- a/examples/app-example-multipledevices/app/build.gradle
+++ b/examples/app-example-multipledevices/app/build.gradle
@@ -1,39 +1,34 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.facebook.testing.screenshot'
 
-project.screenshots.customTestRunner = true
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
 
 android {
-  compileSdkVersion versions.compileSdk
-  buildToolsVersion versions.buildTools
-  defaultConfig {
-    multiDexEnabled true
-    applicationId "com.example.screenshots"
-    minSdkVersion 15
-    targetSdkVersion versions.targetSdk
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "com.example.screenshots.CustomTestRunner"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    compileSdkVersion 26
+    defaultConfig {
+        applicationId "com.facebook.screenshots"
+        minSdkVersion 15
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-  }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
-  compile deps.supportAppCompat
-  compile deps.supportDesign
-  compile deps.supportMultidex
-
-  androidTestCompile deps.junit
-  androidTestCompile(deps.espresso) {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  }
-}
-
-screenshots {
-  multipleDevices true
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
