--- a/examples/app-example-multipledevices/app/src/main/AndroidManifest.xml
+++ b/examples/app-example-multipledevices/app/src/main/AndroidManifest.xml
@@ -1,33 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
- Copyright (c) 2014-present, Facebook, Inc.
- All rights reserved.
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.facebook.screenshots">
 
- This source code is licensed under the license found in the
- LICENSE-examples file in the root directory of this source tree.
--->
-<manifest
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.screenshots">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <application
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity
-      android:name=".MainActivity"
-      android:label="@string/app_name"
-      android:theme="@style/AppTheme.NoActionBar">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-    <activity android:name=".DetailActivity"/>
-  </application>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
