--- a/examples/app-example-multipledevices/build.gradle
+++ b/examples/app-example-multipledevices/build.gradle
@@ -1,27 +1,27 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-  apply from: rootProject.file('../../versions.gradle')
+    ext.kotlin_version = '1.1.51'
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-  repositories {
-    mavenLocal()
-    jcenter()
-  }
-
-  dependencies {
-    classpath plugs.agp
-    classpath plugs.screenshot
-  }
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 allprojects {
-  repositories {
-    mavenLocal()
-    jcenter()
-    maven {
-      url "https://maven.google.com"
+    repositories {
+        google()
+        jcenter()
     }
-  }
 }
 
 task clean(type: Delete) {
-  delete rootProject.buildDir
+    delete rootProject.buildDir
 }
