--- a/examples/app-example-multipledevices/build.gradle
+++ b/examples/app-example-multipledevices/build.gradle
@@ -1,22 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    apply from: rootProject.file('../../versions.gradle')
+
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath plugs.agp
+        classpath plugs.screenshot
+        classpath plugs.kotlin
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
