--- a/versions.gradle
+++ b/versions.gradle
@@ -1,11 +1,11 @@
 ext {
   final screenshotTestVersion = VERSION_NAME
-  final supportLibraryVersion = '26.1.0'
+  final supportLibraryVersion = '28.0.0'
   final dexmakerVersion = "1.4"
-  final lithoVersion = "0.15.0"
+  final lithoVersion = "0.19.0"
 
   versions = [
-      kotlin    : '1.2.50',
+      kotlin    : '1.2.71',
       targetSdk : 26,
       compileSdk: 26,
       minSdk    : 9,
@@ -13,10 +13,11 @@ ext {
   ]
 
   plugs = [
-      "agp"        : "com.android.tools.build:gradle:3.1.0",
+      "agp"        : "com.android.tools.build:gradle:3.2.1",
       "mavenGradle": "com.github.dcendents:android-maven-gradle-plugin:2.1",
       "screenshot" : "com.facebook.testing.screenshot:plugin:$screenshotTestVersion",
       "kotlin"     : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
+      "versions"   : 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
   ]
 
   deps = [
@@ -38,7 +39,7 @@ ext {
       "dexmakerDx"        : "com.crittercism.dexmaker:dexmaker-dx:$dexmakerVersion",
       "dexmakerMockito"   : "com.crittercism.dexmaker:dexmaker-mockito:$dexmakerVersion",
 
-      "espresso"          : "com.android.support.test.espresso:espresso-core:3.0.1",
+      "espresso"          : "com.android.support.test.espresso:espresso-core:3.0.2",
       "junit"             : "junit:junit:4.12",
       "mockito"           : "org.mockito:mockito-core:1.10.19",
       "hamcrest"          : "org.hamcrest:hamcrest-core:1.3",
